conneting to database

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=SpringBootAPI
+spring.datasource.url=jdbc:postgresql://localhost:5433/springboot_db
+spring.datasource.username=springuser
+spring.datasource.password=springpass
+
+spring.jpa.hibernate.ddl-auto=upd
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
